Fix footer white bar on smaller screens
- remove skip content text when tabbing through page content

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,7 @@ footer {
   background-color: black;
   color: white;
   text-align: center;
+  height: 175px;
 }
 .footer-details {
   padding: 0.5rem 0rem 2rem 0rem;
